Wed Jul 25 03:45:51 2001  Arturo Espinosa Aldama  <arturo@ximian.com>

	* network.pl.in (xst_network_interface_ensure_broadcast_and_network):
	Oops: forgot to receive the arguments.

2001-07-24  Arturo Espinosa Aldama  <arturo@ximian.com>

	* network.pl.in (xst_network_interface_ensure_broadcast_and_network):
	if the interface has address and netmask, calculate the broadcast
	and subnet.
	(xst_network_interfaces_get): call this function per iface.

2001-07-24  Hans Petter Jansson  <hpj@ximian.com>

	* time-conf.in (time_sync_hw_from_sys): Implement.
	  (conf_set): Sync hardware clock.

2001-07-24  Tambet Ingo  <tambet@ximian.com>

	* x.pl.in (parse_range_hz): Seems like spaces are allowed everywhere.

	* boot-conf.in (set): Removed some old cruft.

	* x.pl.in: we use strict from now on. Only for this file.
	Fixed damned bug that ruined $sections variable and crashed
	display tool.

2001-07-20  Arturo Espinosa Aldama  <arturo@ximian.com>

	* platform.pl.in (xst_platform_ensure_supported): Don't
	exit after listing the platforms.

	* general.pl.in (xst_merge_std_directives): Added standard
	"platform_set" directive.

	* platform.pl.in (xst_platform_ensure_supported): Send
	end of report before returning.
	(xst_platform_set): A directive handler that sets the
	currently selected platform.

2001-07-20  Hans Petter Jansson  <hpj@ximian.com>

	* replace.pl.in (xst_replace_alchemist_ensure_list_types): Implement.
	  (xst_replace_alchemist): Set required alchemist branch attributes.
	  (xst_replace_alchemist_print): Set required alchemist branch attributes.
	  (xst_replace_alchemist_print_option): Set required alchemist branch
	  attributes.

2001-07-20  Hans Petter Jansson  <hpj@ximian.com>

	* xml.pl.in (xst_xml_model_save): Implement.

	* replace.pl.in (xst_replace_xml_pcdata): Use xst_xml_model_save ().
	  (xst_replace_xml_attribute): Ditto.
	  (xst_replace_xml_pcdata_with_type): Ditto.
	  (xst_replace_xml_attribute_with_type): Ditto.